<resources>
    <string name="app_name">Anonymous Hope</string>
    <string name="Login">LogIn</string>
    <string name="SignUp">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="save">Save</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="Name">Full Name</string>
</resources>