<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center">
    <EditText
        android:id="@+id/edt_phoneNumber"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:inputType="phone"
        android:background="@drawable/views_back"
        android:hint="@string/phoneNumber"
        android:layout_marginVertical="20dp"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:background="@drawable/views_back"
        android:hint="@string/password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="forgot password?"
        android:layout_marginLeft="55dp"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="#636363"
        android:background="@drawable/btn_back"
        android:layout_marginVertical="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        />
<Button
    android:id="@+id/btn_signUp"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/SignUp"
    android:textColor="#636363"
    android:layout_marginVertical="20dp"
    android:background="@drawable/btn_back"/>

</androidx.appcompat.widget.LinearLayoutCompat>