<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:weightSum="15"
    android:background="@drawable/signupback"
>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginRight="120dp"
        android:textSize="30dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account!"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_marginRight="144dp"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0.1"/>


        <androidx.cardview.widget.CardView
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:elevation="25dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:cardCornerRadius="5dp"
            >

            <EditText
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/views_back"
                android:hint="@string/Name"
                android:inputType="text"
                android:paddingLeft="20dp" />
        </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>
    <androidx.cardview.widget.CardView
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:elevation="25dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/views_back"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp" />

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>

        <androidx.cardview.widget.CardView
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="25dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <EditText
                android:id="@+id/edt_phoneNum4Signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/views_back"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:paddingLeft="20dp" />

        </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>
        <androidx.cardview.widget.CardView
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="25dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <EditText
                android:id="@+id/edt_pass4Signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/views_back"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp" />
        </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>
        <androidx.cardview.widget.CardView
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:elevation="25dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:cardCornerRadius="5dp">

            <EditText
                android:id="@+id/edt_re_pass4signUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/views_back"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp" />
        </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignUp as:"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginRight="139.5dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Donor"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Needy"
            android:layout_marginHorizontal="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NGO"/>
    </RadioGroup>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"/>
        <Button
            android:id="@+id/btn_saveSignup"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="@drawable/btn_back"
            android:text="@string/SignUp"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LogIn"
            android:textColor="#FF7316"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>



</androidx.appcompat.widget.LinearLayoutCompat>